--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Open+Sans&display=swap');
+
+*, /* All elements*/
+*::before, /* All ::before pseudo-elements */
+*::after {
+  /* All ::after pseudo-elements */
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  font-size: 62.5%;
+  /* Color Pallette */
+  --task-black: #3D405B;
+  --task-white: #F4F1DE;
+  --task-yellow: #F2CC8F;
+  --task-orange: #E07A5F;
+  --task-green: #81B29A;
+  /* Style */
+  --task-font-title: 'Comfortaa', cursive;
+  --task-font-text: 'Open Sans', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  background-color: var(--task-white);
+  color: var(--task-black);
+  font-family: var(--task-font-text);
+  font-size: 1.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1, h2, h3 {
+  font-family: var(--task-font-title);
+  font-weight: 800;
+}
+
+a {
+  text-decoration: none;
+  color: var(--task-green);
+}
+
+.button {
+  background-color: var(--task-black);
+  color: var(--task-white);
+  outline: none;
+  font-size: 1.8rem;
+  padding: 1.2rem 0;
+}
+
+.container {
+  width: 40rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.todo {
+  margin-bottom: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input {
+  border: none;
+  background-color: #ddd;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  font-size: 1.8rem;
+}
+
+.todo-title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.todo-description {
+  margin-bottom: 0;
+}
+
+.todo-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.COMPLETE {
+  color: var(--task-green);
+}
+
+.NOTSTARTED {
+  color: var(--task-orange)
 }
