--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Open+Sans&display=swap');
 
-*, /* All elements*/
-*::before, /* All ::before pseudo-elements */
-*::after {
-  /* All ::after pseudo-elements */
-  box-sizing: border-box;
-}
-
 :root {
   font-size: 62.5%;
   /* Color Pallette */
@@ -20,6 +13,14 @@
   /* Style */
   --task-font-title: 'Comfortaa', cursive;
   --task-font-text: 'Open Sans', sans-serif;
+}
+
+*, /* All elements*/
+*::before, /* All ::before pseudo-elements */
+*::after {
+  /* All ::after pseudo-elements */
+  box-sizing: border-box;
+  font-size: 1.5rem;
 }
 
 html, body, body > * {
@@ -51,5 +52,8 @@ a {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+amplify-button {
+  --padding: .5rem;
 }
