--- a/src/components/form/ToDoForm.css
+++ b/src/components/form/ToDoForm.css
@@ -1,11 +1,11 @@
 .new-task {
-  width: 30rem;
-  height: 30rem;
+  width: 20rem;
+  height: 20rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 2rem;
-  padding: 2rem 3rem;
+  margin: 1rem;
+  padding: 1rem 2rem;
   border-radius: 30px;
   border-radius: 30px;
   background: var(--task-green);
@@ -17,14 +17,14 @@
   background-color: var(--task-black);
   color: var(--task-white);
   outline: none;
-  font-size: 1.5rem;
-  padding: .5rem 0;
+  /* font-size: 1.5rem; */
+  padding: .25rem 0;
 }
 
 .input {
   border: none;
   background-color: #92c9ae;
-  margin-bottom: 1rem;
-  padding: .5rem;
-  font-size: 1.5rem;
+  margin-bottom: .5rem;
+  padding: .25rem;
+  /* font-size: 1.5rem; */
 }
